Fix scrollbar on full width containers

--- a/src/blocks/block-layout/styles/editor.scss
+++ b/src/blocks/block-layout/styles/editor.scss
@@ -401,6 +401,7 @@ div[data-type*="atomic-blocks/ab-columns"][data-align="full"],
 div[data-type*="atomic-blocks/ab-container"][data-align="full"] {
 	margin-top: auto;
 	margin-bottom: auto;
+	overflow: hidden;
 }
 
 .components-placeholder.ab-layout-selector-placeholder,
